--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Serene Haven wellness website",
   "main": "index.html",
   "scripts": {
-    "build": "echo 'No build process needed for static site' && exit 0",
-    "start": "echo 'Static site - open index.html in browser'"
-  },
+    "build": "chmod +x build.sh && ./build.sh"
+  }
   "repository": {
     "type": "git",
     "url": "https://github.com/HaritsAcheiz/serene-haven-website.git"
